<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="action_settings">Settings</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="server_port">Port Server</string>
    <string name="client_port">Port Client</string>
    <string name="start_server">Start Server</string>
    <string name="client_url">URL</string>
    <string name="get">GET</string>

</resources>
