<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltest02.graphicuserinterface.PracticalTest02MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server" />

    <EditText
        android:id="@+id/et_server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_port" />

    <Button
        android:id="@+id/start_server_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_server" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client" />

    <EditText
        android:id="@+id/et_client_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_url" />


    <EditText
        android:id="@+id/et_client_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_port" />

    <Button
        android:id="@+id/btn_get"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/get"/>

    <EditText
        android:id="@+id/et_request_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"/>
</LinearLayout>

